--- a/frontend/src/userProfile/userProfile.css
+++ b/frontend/src/userProfile/userProfile.css
@@ -1,77 +1,120 @@
 /*header styles starts*/
-
-.userProfile{
+.userProfile {
       background-color: white;
       border: none;
       border-radius: 1rem;
-      padding:2rem;
+      padding: 2rem;
       width: 25rem;
+      max-width: 100%; /* Added to prevent overflow on mobile */
 }
-.userheader{
+
+.userheader {
       display: flex;
-      justify-content:flex-start;
+      justify-content: flex-start;
       align-items: center;
       padding-bottom: 1rem;
       position: relative;
+      flex-wrap: wrap; /* Added for better mobile layout */
+      gap: 1rem; /* Added spacing between wrapped items */
 }
-.userDescription{
+
+.userDescription {
       text-transform: uppercase;
       opacity: .6;
 }
-.profileIcon img{
+
+.profileIcon img {
       margin-left: -7px;
       width: 5rem;
 }
-.logoutButton{
+
+.logoutButton {
       position: absolute;
-      right:0;
+      right: 0;
 }
-.logoutButton button{
+
+.logoutButton button {
       background-color: transparent;
       border: 1px groove grey;
       border-radius: .5rem;
       padding-inline: 1rem;
-      padding-block:.5rem;
-      font-weight:600;
+      padding-block: .5rem;
+      font-weight: 600;
       cursor: pointer;
 }
+
+/* Media query for mobile devices */
+@media screen and (max-width: 480px) {
+      .userProfile {
+            padding: 1rem;
+            width: 100%;
+      }
+
+      .userheader {
+            justify-content: center;
+            text-align: center;
+      }
+
+      .logoutButton {
+            position: static;
+            width: 100%;
+            margin-top: 1rem;
+      }
+
+      .logoutButton button {
+            width: 100%;
+      }
+
+      .profileIcon img {
+            margin-left: 0;
+      }
+}
+
 /*header styles ends*/
 
-.attendanceHeading{
+.attendanceHeading {
       font-weight: 700;
       font-size: 16px;
 }
-.attendanceGraph{
+
+.attendanceGraph {
       width: 100%;
       height: .5rem;
-      border: 1px groove  grey;
+      border: 1px groove grey;
       border-radius: 1rem;
-      background-color:transparent;
+      background-color: transparent;
       margin-block: 10px;
 }
-.loading{
-      width:inherit;
+
+.loading {
+      width: inherit;
       height: inherit;
       border-radius: inherit;
       background-color: black;
       transition: all .5s linear;
 }
-.attendanceDescription{
+
+.attendanceDescription {
       opacity: .7;
       font-size: 13px;
 }
-.MessCutformSection input{
-      margin-block:2rem;
+
+.MessCutformSection input {
+      margin-block: 2rem;
       padding: 1rem;
       border: 1px groove;
       border-radius: .5rem;
+      width: 100%; /* Added for better mobile experience */
+      box-sizing: border-box; /* Added to include padding in width calculation */
 }
-.messCutReport{
+
+.messCutReport {
       display: flex;
       flex-direction: column;
       padding-top: 2.5rem;
 }
-.messCutReport button{
+
+.messCutReport button {
       display: flex;
       justify-content: center;
       align-items: center;
@@ -82,8 +125,9 @@
       padding: .7rem;
       border-radius: .5rem;
       cursor: pointer;
-      text-transform: uppercase; 
+      text-transform: uppercase;
 }
-.messCutReport button:hover{
+
+.messCutReport button:hover {
       background-color: rgb(12, 12, 12);
 }
