--- a/frontend/src/loginPage/loginPage.css
+++ b/frontend/src/loginPage/loginPage.css
@@ -9,6 +9,7 @@
       background-color: white;
       padding: 2rem;
       border-radius: 1rem;
+      width: 21rem;
 }
 .inputSection{
       display: flex;
@@ -62,8 +63,13 @@
       font-weight: 700;
       font-size: 24px;
 }
-.loginDescription{
+.userLoginPage-loginDescription{
       opacity: .7;
       font-size: 13px;
-      letter-spacing: 1px;
+}
+@media(max-width:437px){
+      .loginPage{
+            padding: 1.5rem;
+            width: 19rem;
+      }
 }
