--- a/frontend/src/viewPrevMessCut/prevMessCut.css
+++ b/frontend/src/viewPrevMessCut/prevMessCut.css
@@ -21,7 +21,7 @@
       padding: 10px;
   }
   .absent {
-      background-color: black;
+      background-color: red;
       color:white;
       border-radius: 10rem;
   }
