--- a/frontend/src/userProfile/userProfile.css
+++ b/frontend/src/userProfile/userProfile.css
@@ -135,4 +135,7 @@
       .requiredDescription{
         font-size: 12px !important;
       }
+      .user-logoutButton button{
+        padding-inline: 10px;
+      }
     }
